<resources>
    <string name="app_name">Navigation Drawer</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">E-WALLET</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_savings">Savings</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_goals">Goals</string>
    <string name="menu_logout">Log Out</string>
</resources>