<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="Home" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/report_icon"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_savings"
            android:icon="@drawable/savings_icon"
            android:title="@string/menu_savings" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/expense_icon"
            android:title="@string/menu_expenses" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/goal_icon"
            android:title="@string/menu_goals" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/menu_logout"/>

    </group>


</menu>